@@ -1,12 +1,15 @@
 local E, L, V, P, G, _ = unpack(ElvUI); --Inport: Engine, Locales, PrivateDB, ProfileDB, GlobalDB, Localize Underscore
 local BUI = E:GetModule('BenikUI');
 local UFB = E:GetModule('BuiUnits');
+local BUIC = E:GetModule('BuiCastbar');
 local UF = E:GetModule('UnitFrames');
 
 -- Defaults
 P['ufb'] = {
+	-- EmptyBars
 	['barshow'] = true,
 	['barheight'] = 20,
+	-- Detach portrait
 	['detachPlayerPortrait'] = false,
 	['PlayerPortraitWidth'] = 110,
 	['PlayerPortraitHeight'] = 85,
@@ -18,32 +21,28 @@ P['ufb'] = {
 	['TargetPortraitHeight'] = 85,
 	['TargetPortraitShadow'] = false,
 	['TargetPortraitTransparent'] = true,
+	-- Powerbar texture
 	['powerstatusbar'] = "BuiFlat",
+	-- Castbar attach
+	['attachCastbar'] = true,
+	['castText'] = true,
+	['yOffsetText'] = -15,
+	['overText'] = false,
 }
 
 local function ufTable()
-	E.Options.args.unitframe.args.general.args.ufb = {
-		order = 2,
+	E.Options.args.bui.args.config.args.ufb = {
+		order = 10,
 		type = 'group',
-		name = BUI.Title,
-		guiInline = true,
+		name = L["UnitFrames"],
 		args = {
-			powerstatusbar = {
-				type = "select", dialogControl = 'LSM30_Statusbar',
-				order = 1,
-				name = BUI:cOption(L["PowerBar"])..BUI.newsign,
-				desc = L["Power statusbar texture."],
-				values = AceGUIWidgetLSMlists.statusbar,
-				get = function(info) return E.db.ufb[ info[#info] ] end,				
-				set = function(info, value) E.db.ufb[ info[#info] ] = value; UFB:Update_PowerStatusBar() end,
-			},
 			eframes = {
-				order = 2,
+				order = 1,
 				type = 'group',
-				name = BUI:cOption(L["Empty Frames"]),
+				name = L["Empty Frames"],
 				guiInline = true,
 				get = function(info) return E.db.ufb[ info[#info] ] end,
-				set = function(info, value) E.db.ufb[ info[#info] ] = value; UFB:ArrangePlayer(); UFB:ArrangeTarget(); end,	
+				set = function(info, value) E.db.ufb[ info[#info] ] = value; UFB:ArrangePlayer(); UFB:ArrangeTarget(); end,
 				args = {
 					barshow = {
 						order = 1,
@@ -58,6 +57,60 @@ local function ufTable()
 						desc = L["Change the Empty frames height (Player and Target)."],
 						disabled = function() return not E.db.ufb.barshow end,
 						min = 10, max = 50, step = 1,
+					},
+				},
+			},
+			buibars = {
+				order = 2,
+				type = 'group',
+				name = L["Bars"],
+				guiInline = true,
+				args = {
+					powerstatusbar = {
+						type = "select", dialogControl = 'LSM30_Statusbar',
+						order = 1,
+						name = L["PowerBar Texture"]..BUI.newsign,
+						desc = L["Power statusbar texture."],
+						values = AceGUIWidgetLSMlists.statusbar,
+						get = function(info) return E.db.ufb[ info[#info] ] end,				
+						set = function(info, value) E.db.ufb[ info[#info] ] = value; UFB:Update_PowerStatusBar() end,
+					},
+				},
+			},
+			buicastbar = {
+				order = 3,
+				type = 'group',
+				name = L["Castbar"],
+				guiInline = true,
+				disabled = function() return not E.db.ufb.barshow end,
+				get = function(info) return E.db.ufb[ info[#info] ] end,
+				set = function(info, value) E.db.ufb[ info[#info] ] = value; BUIC:UpdatePlayer(); BUIC:UpdateTarget(); UF:CreateAndUpdateUF('player'); UF:CreateAndUpdateUF('target'); end,
+				args = {
+					attachCastbar = {
+						order = 1,
+						type = "toggle",
+						name = L["Attach on Empty Frames"]..BUI.newsign,
+						desc = L["Attaches Player and Target Castbar on the Empty Frames."],
+					},
+					castText = {
+						order = 2,
+						type = "toggle",
+						name = L["Castbar Text"],
+						desc = L["Show/Hide the Castbar text."],
+					},
+					yOffsetText = {
+						order = 3,
+						type = "range",
+						name = L["Y Offset"],
+						desc = L["Adjust text Y Offset"],
+						min = -25, max = 0, step = 1,
+					},
+					overText = {
+						type = "toggle",
+						order = 4,
+						name = L["Overlay the text"],
+						desc = L["The castbar overlays any text on the EmptyBars."],
+						set = function(info, value) E.db.ufb[ info[#info] ] = value; E:StaticPopup_Show("PRIVATE_RL"); end,
 					},
 				},
 			},
