@@ -1,3 +1,12 @@
+[b]1.10[/b] (Sep 01, 2014)
+
+*Added a new feature: Attach Castbar on the EmptyBars. Credits: Blazeflack, with his permission, based in his addon ElvUI_CastBarPowerOverlay (http://www.tukui.org/addons/index.php?act=view&id=62).
+*Moved all BenikUI Unitframe options from ElvUI Unitframes options, to their own tab.
+*During the Install, the default ElvUI chat frame Loot/Trade is moved to the left chat panel, so that any Damage meter can sit freely on the right chat panel. If the chat frame is already renamed by the user, then it has to be moved manually.
+*The last install step is now called "Addons". Amongst other things, it creates a Recount profile called "BenikUI" and adjust it's looks to fit with BenikUI. (AddOnSkins addon required).
+*Now the Player name will also hide when mouseovering the EmptyBar to show XP or Rep.
+*Minor fixes and adjustments.
+
 [b]1.09[/b] (Aug 23, 2014)
 
 *Prevented a lua error in case AddOnSkins addon is not loaded. 
